--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,26 @@
 --- #YAML:1.0
-name:                Text-Extract-MaketextCallPhrases
-version:             0.1
-abstract:            Extract phrases from maketext–call–looking text
-license:             ~
-author:              
+name:               Text-Extract-MaketextCallPhrases
+version:            0.2
+abstract:           Extract phrases from maketext–call–looking text
+author:
     - Daniel Muey <http://drmuey.com/cpan_contact.pl>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Module::Want:                  0.3
-    String::Unquotemeta:           0
-    Test::More:                    0
-    Text::Balanced:                0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    File::Temp:           0
+    Module::Want:         0.3
+    String::Unquotemeta:  0
+    Test::More:           0
+    Text::Balanced:       0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
