Import of DMUEY/Text-Extract-MaketextCallPhrases-0.3 from CPAN.
gitpan-cpan-distribution: Text-Extract-MaketextCallPhrases
gitpan-cpan-version:      0.3
gitpan-cpan-path:         DMUEY/Text-Extract-MaketextCallPhrases-0.3.tar.gz
gitpan-cpan-author:       DMUEY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,26 @@
---- #YAML:1.0
-name:               Text-Extract-MaketextCallPhrases
-version:            0.2
-abstract:           Extract phrases from maketext–call–looking text
+---
+abstract: 'Extract phrases from maketext–call–looking text'
 author:
-    - Daniel Muey <http://drmuey.com/cpan_contact.pl>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Daniel Muey <http://drmuey.com/cpan_contact.pl>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    File::Temp:           0
-    Module::Want:         0.3
-    String::Unquotemeta:  0
-    Test::More:           0
-    Text::Balanced:       0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Text-Extract-MaketextCallPhrases
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  File::Temp: 0
+  Module::Want: 0.3
+  String::Unquotemeta: 0
+  Test::More: 0
+  Text::Balanced: 0
+version: 0.3
